deployments/k8s/infrastructure/overlays/prod/api-gateway/patch-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-cors
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - PATCH
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - https://go.micro.commerce.discky.com
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
