deployments/k8s/infrastructure/overlays/prod/api-gateway/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gateway-route
spec:
  hostnames:
    - api.discky.com
